2007-11-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Don't try to build shared libraries on BGL.

	* autogen.sh, aclocal.sh: Suppress error messages from which.

2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Rewritten to make better use of AC_PROG_CXX; Logic
	added to manage subdirectory rudeconfig directly (tests moved from
	original rudeconfig configure.ac).

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Test for ompi_comm_create (used to identify
	OPENMPI); Moved configuration of rudeconfig to beginning.

	* Makefile.am (SUBDIRS): Added rudeconfig.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Added AC_CONFIG_SUBDIRS(rudeconfig).
					 
	* rudeconfig: Added.

2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Added test for rts_get_personality; Generate
	utils/Makefile.

	* Makefile.am (SUBDIRS): Added utils.

2007-10-18  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configure.ac: Introduced guessing of host MPI framework. Handle
	openmpi version of mpiCC.

2007-09-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* AUTHORS, COPYING, INSTALL, NEWS, README, ChangeLog,
	configure.ac, Makefile.am, autogen.sh, aclocal.sh: New files